--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-plugin-manifest": "^2.6.1",
     "gatsby-plugin-offline": "^3.4.0",
     "gatsby-plugin-react-helmet": "^3.4.0",
+    "gatsby-plugin-sass": "^3.1.0",
     "gatsby-plugin-sharp": "^2.8.0",
     "gatsby-plugin-twitter": "^2.6.0",
     "gatsby-source-filesystem": "^2.5.0",
@@ -18,7 +19,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
-    "react-responsive-carousel": "^3.2.11"
+    "sass": "^1.32.5",
+    "swiper": "^6.4.7"
   },
   "devDependencies": {
     "prettier": "2.1.2"
